--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
-trigger: 
-  - 'main'
+trigger:
+- 'main'
 
 variables:
   buildConfiguration: 'Release'
@@ -18,7 +18,7 @@ stages:
       vmImage: 'ubuntu-20.04'
     steps:
     - task: Docker@2
-      displayName: 'Build and push the image to container registry'
+      displayName: 'Build and push the web image to container registry'
       inputs:
         command: buildAndPush
         buildContext: $(Build.Repository.LocalPath)
@@ -58,7 +58,8 @@ stages:
         deploy:
           steps:
           - download: current
-            artifact: manifest
+            artifact: manifests
+
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
@@ -67,6 +68,7 @@ stages:
               dockerRegistryEndpoint: 'Container Registry Connection'
               kubernetesServiceConnection: 'Kubernetes Cluster Connection'
               namespace: 'default'
+
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
